# avocado-price-predictor-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
avocado_price_predictor_model/: __init__.py  load_data.py  load_model.py  predict.py  preprocess.py
predict/: __init__.py  predict.py
src/: predict.py  tests.py
tests/: tests.py
