[metadata]
name = avocado_price_predictor_model
version = 0.0.7
author = Shay Sirek
author_email = shaysirek@gmail.com
description = Avocado Price Prediction Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaySirek/avocado-price-predictor-model
project_urls =
    Bug Tracker = https://github.com/shaySirek/avocado-price-predictor-model/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .